# pyappify

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
src/: App.tsx  ConsolePage.tsx  SettingsPage.tsx  UpdateLogPage.tsx  i18n.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: pyappify.yml
src-tauri/capabilities/: default.json
src-tauri/locales/: app.yml
src-tauri/nsis/: installer.nsi
src-tauri/src/: app.rs  app_service.rs  config_manager.rs  emitter.rs  execute_python.rs  git.rs  install.rs  lib.rs  main.rs  python_env.rs  submodule.rs
src-tauri/src/runas/: impl_windows.rs
src-tauri/src/utils/: command.rs  defender.rs  error.rs  file.rs  locale.rs  logger.rs  mod.rs  path.rs  process.rs  window.rs  yaml_parser.rs
