[package]
name = "pyappify"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pyappify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
git2 = { version = "0.20.1" } # Or another client like -curl
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry", "env-filter", "time", "local-time"] }
tracing-appender = "0.2"
anyhow = "1.0.98"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json", "socks", "stream"] }
once_cell = "1.21.3"
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
walkdir = "2.5.0"
sysinfo = "0.35.1"
tar = "0.4.44"
flate2 = "1.1.1"
time = "0.3.41"
shortcuts-rs = "1.1.1"
rand = "0.9.1"
runas = "1.2.0"
serde_json = "1.0.140"
serde_yaml = "0.9.1"
lazy_static = "1.5.0"
thiserror = "2.0.12"
chrono = { version = "0.4", features = ["serde"] }
sys-locale = "0.3.2"
zip = "4.2.0"
futures-util = "0.3.31"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
