[package]
name = "pyappify"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pyappify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0.228", features = ["derive"] }
git2 = "0.21.0" # Or another client like -curl
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "registry", "env-filter", "time", "local-time"] }
tracing-appender = "0.2.5"
anyhow = "1.0.102"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["blocking", "json", "socks", "stream"] }
once_cell = "1.21.4"
tokio = { version = "1.52.3", features = ["full"] }
rust-i18n = "4.0.0"
walkdir = "2.5.0"
sysinfo = "0.38.2"
tar = "0.4.46"
flate2 = "1.1.9"
time = "0.3.47"
shortcuts-rs = "1.1.1"
rand = "0.10.1"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
sys-locale = "0.3.2"
zip = "8.6.0"
futures-util = "0.3.32"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
dashmap = "6.1.0"
tauri-plugin-notification = "2.3.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
